; ModuleID = '/home/carl/AnghaBench/linux/lib/extr_..scriptsdtclibfdtfdt_sw.c_fdt_grab_space_.c'
source_filename = "/home/carl/AnghaBench/linux/lib/extr_..scriptsdtclibfdtfdt_sw.c_fdt_grab_space_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i64)* @fdt_grab_space_ to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @fdt_grab_space_(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @fdt_size_dt_struct(i8* %8)
  store i32 %9, i32* %6, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @fdt_totalsize(i8* %10)
  %12 = load i8*, i8** %4, align 8
  %13 = call i32 @fdt_off_dt_struct(i8* %12)
  %14 = sub nsw i32 %11, %13
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @fdt_size_dt_strings(i8* %15)
  %17 = sub nsw i32 %14, %16
  store i32 %17, i32* %7, align 4
  %18 = load i32, i32* %6, align 4
  %19 = sext i32 %18 to i64
  %20 = load i64, i64* %5, align 8
  %21 = add i64 %19, %20
  %22 = load i32, i32* %6, align 4
  %23 = sext i32 %22 to i64
  %24 = icmp ult i64 %21, %23
  br i1 %24, label %33, label %25

25:                                               ; preds = %2
  %26 = load i32, i32* %6, align 4
  %27 = sext i32 %26 to i64
  %28 = load i64, i64* %5, align 8
  %29 = add i64 %27, %28
  %30 = load i32, i32* %7, align 4
  %31 = sext i32 %30 to i64
  %32 = icmp ugt i64 %29, %31
  br i1 %32, label %33, label %34

33:                                               ; preds = %25, %2
  store i8* null, i8** %3, align 8
  br label %45

34:                                               ; preds = %25
  %35 = load i8*, i8** %4, align 8
  %36 = load i32, i32* %6, align 4
  %37 = sext i32 %36 to i64
  %38 = load i64, i64* %5, align 8
  %39 = add i64 %37, %38
  %40 = trunc i64 %39 to i32
  %41 = call i32 @fdt_set_size_dt_struct(i8* %35, i32 %40)
  %42 = load i8*, i8** %4, align 8
  %43 = load i32, i32* %6, align 4
  %44 = call i8* @fdt_offset_ptr_w_(i8* %42, i32 %43)
  store i8* %44, i8** %3, align 8
  br label %45

45:                                               ; preds = %34, %33
  %46 = load i8*, i8** %3, align 8
  ret i8* %46
}

declare dso_local i32 @fdt_size_dt_struct(i8*) #1

declare dso_local i32 @fdt_totalsize(i8*) #1

declare dso_local i32 @fdt_off_dt_struct(i8*) #1

declare dso_local i32 @fdt_size_dt_strings(i8*) #1

declare dso_local i32 @fdt_set_size_dt_struct(i8*, i32) #1

declare dso_local i8* @fdt_offset_ptr_w_(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
